# -libcv

./: .gitignore  CMakeLists.txt  azure-pipelines.yml  package.json  webpack.config.js
binding/cmake/: mingw.cmake
binding/src/: CMakeLists.txt  binding.cpp  binding.h  index.cpp
doc/: conf.py  index.rst  template_matching.rst
src/: binding.ts  index.ts
test/: index.ts
