CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(libcv )
set(CMAKE_USE_RELATIVE_PATHS ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist)
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/dist)
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/dist)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)

set(XTENSOR_DIR ${PROJECT_SOURCE_DIR}/3rd/xtensor/xtensor-master)
set(XTL_DIR ${PROJECT_SOURCE_DIR}/3rd/xtl/xtl-master)
set (PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR}/binding)
set (CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake")

set_property(GLOBAL PROPERTY USE_FOLDERS ON) 

ADD_SUBDIRECTORY(binding/src)